# Logger

./: CMakeLists.txt  README  README.md
src/: fileSink.cpp  logger.cpp  main.cpp  parse.cpp  socketSink.cpp  threadSafeQueue.tpp
src/include/: fileSink.h  iLogSink.h  logLevel.h  logger.cpp  logger.h  parse.h  socketSink.cpp  socketSink.h  threadSafeQueue.h  threadSafeQueue.tpp
src/logApp/: main.cpp
src/statsApp/: main.cpp
